test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_register_parameter.draco
proc main(register int a) void : a := 1; corp;

