test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_register_as_identifier.draco
int register;
 
proc main() void : a := 1; corp;
